<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="0.2"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        android:src="@drawable/menu_logo" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="0.133"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.33" />
        
        <Button
            android:id="@+id/btn_mm_continue"
            style="@style/ManqalaVariButtonTheme"
            android:onClick="onClickHandler"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="0.33"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/btn_mm_continue_label" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.33" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="0.133"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.165" />
        
        <Button
            android:id="@+id/btn_mm_campaign"
            style="@style/ManqalaVariButtonTheme"
            android:onClick="onClickHandler"
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="0.33"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/btn_mm_campaign_label" />
        
        <Button
            android:id="@+id/btn_mm_fastgame"
            style="@style/ManqalaVariButtonTheme"
            android:onClick="onClickHandler"
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="0.33"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/btn_mm_fastgame_label" />
        
        <TextView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.165" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="0.133"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.165" />
        
        <Button
            android:id="@+id/btn_mm_multiplayer"
            style="@style/ManqalaVariButtonTheme"
            android:onClick="onClickHandler"
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="0.33"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/btn_mm_multiplayer_label" />
        
        <Button
            android:id="@+id/btn_mm_tutorial"
            style="@style/ManqalaVariButtonTheme"
            android:onClick="onClickHandler"
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="0.33"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/btn_mm_tutorial_label" />
        
        <TextView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.165" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="0.133"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.165" />
        
        <Button
            android:id="@+id/btn_mm_options"
            style="@style/ManqalaVariButtonTheme"
            android:onClick="onClickHandler"
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="0.33"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/btn_mm_options_label" />
        
        <Button
            android:id="@+id/btn_mm_credits"
            style="@style/ManqalaVariButtonTheme"
            android:onClick="onClickHandler"
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="0.33"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/btn_mm_credits_label" />
        
        <TextView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.165" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="0.133"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.33" />
        
        <Button
            android:id="@+id/btn_mm_exit"
            style="@style/ManqalaVariButtonTheme"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="0.33"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="onClickHandler"
            android:text="@string/btn_mm_exit_label" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.33" />
        
    </LinearLayout>
    
    <com.google.ads.AdView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_publisher_id"
        ads:loadAdOnCreate="true" />

</LinearLayout>