<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="0.2"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        android:src="@drawable/menu_logo" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_weight="0.133"
        android:text="@string/btn_mm_tutorial_label" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_weight="0.401" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical" >
        
	        <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:gravity="center_vertical|center_horizontal"
		        android:text="@string/t_text_1" />
	        
	        <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical|center_horizontal"
		        android:orientation="horizontal" >
	
		        <TextView
		            android:layout_width="1dp"
		            android:layout_height="fill_parent"
		            android:layout_weight="0.1" />
		        
		        <ImageView
		            android:layout_width="1dp"
		            android:layout_height="wrap_content"
		            android:layout_gravity="top|center_horizontal"
		            android:layout_weight="0.8"
		            android:adjustViewBounds="true"
		            android:contentDescription="@string/app_name"
		            android:scaleType="fitStart"
		            android:src="@drawable/tutorial_1" />
		        
		        <TextView
		            android:layout_width="1dp"
		            android:layout_height="fill_parent"
		            android:layout_weight="0.1"
		            android:gravity="center_vertical|center_horizontal" />
		        
		    </LinearLayout>
        
	        <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:gravity="center_vertical|center_horizontal"
		        android:text="@string/t_text_2" />
	        
	        <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical|center_horizontal"
		        android:orientation="horizontal" >
	
		        <TextView
		            android:layout_width="1dp"
		            android:layout_height="fill_parent"
		            android:layout_weight="0.1" />
		        
		        <ImageView
		            android:layout_width="1dp"
		            android:layout_height="fill_parent"
		            android:layout_gravity="center_vertical|center_horizontal"
		            android:layout_weight="0.8"
		            android:adjustViewBounds="true"
		            android:contentDescription="@string/app_name"
		            android:scaleType="fitStart"
		            android:src="@drawable/tutorial_2" />
		        
		        <TextView
		            android:layout_width="1dp"
		            android:layout_height="fill_parent"
		            android:layout_weight="0.1"
		            android:gravity="center_vertical|center_horizontal" />
		        
		    </LinearLayout>
		    
	        <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:gravity="center_vertical|center_horizontal"
		        android:text="@string/t_text_3" />
	        
        </LinearLayout>
    </ScrollView>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="0.133"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.33" />
        
        <Button
            android:id="@+id/btn_t_back"
            style="@style/ManqalaVariButtonTheme"
            android:onClick="onClickHandler"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="0.33"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/btn_back_label" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.33" />
        
    </LinearLayout>
    
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_weight="0.133" />

</LinearLayout>